working to create content provider

--- a/android/workload/app/src/main/AndroidManifest.xml
+++ b/android/workload/app/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="com.gmail.konstantin.schubert.workload.AuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        
+        <provider
+            android:authorities="com.gmail.konstantin.schubert.android.datasync.provider"
+            android:name="com.gmail.konstantin.schubert.workload.SurveyContentProvider"
+            android:exported="false"
+            android:syncable="true">
+        </provider>
     </application>
 
 </manifest>
