--- a/android/workload/app/src/main/AndroidManifest.xml
+++ b/android/workload/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gmail.konstantin.schubert.workload">
+    package="com.gmail.konstantin.schubert.workload" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MaterialTheme">
+        android:theme="@style/MaterialTheme" >
         <activity
             android:name=".calendar"
-            android:label="@string/title_activity_calendar">
+            android:label="@string/title_activity_calendar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,21 +17,31 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.gmail.konstantin.schubert.workload.AuthenticatorService">
+        <service android:name=".AuthenticatorService" >
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator"/>
+                <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
-        
+
         <provider
+            android:name=".SurveyContentProvider"
             android:authorities="de.tu-dresden.zqa.survey"
-            android:name="com.gmail.konstantin.schubert.workload.SurveyContentProvider"
             android:exported="false"
-            android:syncable="true">
+            android:syncable="true" >
         </provider>
+
+        <activity
+            android:name=".SelectLecture"
+            android:label="@string/title_activity_select_lecture"
+            android:parentActivityName=".calendar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gmail.konstantin.schubert.workload.calendar" />
+        </activity>
     </application>
 
 </manifest>
