--- a/android/workload/app/src/main/AndroidManifest.xml
+++ b/android/workload/app/src/main/AndroidManifest.xml
@@ -55,6 +55,12 @@
         </activity>
 
         <activity
+            android:name=".WebLoginActivity"
+            android:label="@string/title_activity_web_login">
+        </activity>
+
+
+        <activity
             android:name=".SelectLecture"
             android:parentActivityName=".calendar"
             android:launchMode="singleTop">
