--- a/android/workload/app/src/main/AndroidManifest.xml
+++ b/android/workload/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/MaterialTheme" >
 
-        <service android:name=".AuthenticatorService" >
+        <service android:name=".sync.AuthenticatorService" >
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
@@ -26,7 +26,7 @@
         </service>
 
         <service
-            android:name="com.gmail.konstantin.schubert.workload.SyncService"
+            android:name=".sync.SyncService"
             android:exported="true"
             android:process=":sync">
             <intent-filter>
@@ -55,7 +55,7 @@
         </activity>
 
         <activity
-            android:name=".WebLoginActivity"
+            android:name=".sync.WebLoginActivity"
             android:label="@string/title_activity_web_login">
         </activity>
 
