--- a/android/workload/app/build.gradle
+++ b/android/workload/app/build.gradle
@@ -24,7 +24,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
 //    compile 'com.android.support:design:23.0.1'
-    compile 'joda-time:joda-time:2.8.2' // for joda
-
+    compile group: 'com.google.guava', name: 'guava', version: '17.0'
 
 }
