--- a/android/workload/app/src/main/AndroidManifest.xml
+++ b/android/workload/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MaterialTheme" >
+        android:theme="@style/AppTheme" >
 
         <service android:name=".sync.AuthenticatorService" >
             <intent-filter>
