--- a/android/workload/app/build.gradle
+++ b/android/workload/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
@@ -23,8 +24,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
-    compile group: 'com.google.guava', name: 'guava', version: '17.0'
+    compile 'com.google.guava:guava:17.0'
     compile 'joda-time:joda-time:2.8.2'
+    //compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
     compile 'com.android.support:design:23.0.0'
-
 }
