--- a/android/workload/app/build.gradle
+++ b/android/workload/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'joda-time:joda-time:2.8.2'
     //compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
     compile 'com.android.support:design:23.0.0'
+    compile project(':MPChartLib')
 }
