--- a/android/workload/app/src/main/AndroidManifest.xml
+++ b/android/workload/app/src/main/AndroidManifest.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    The manifest file of the wokrload android app.
+-->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.konstantin.schubert.workload" >
+
+    <!--
+        The permissions which are requested by the app during installation.
+    -->
+    <!--\todo: Prune the permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-    <!--I would like to get rid of some of the following permissions when the app is finished-->
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_SYNC_STATS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <!--
+            Android services
+        -->
+        <!-- Service needed when using Android's authentication framework-->
         <service android:name=".sync.AuthenticatorService" >
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
@@ -25,6 +38,7 @@
                 android:resource="@xml/authenticator" />
         </service>
 
+        <!-- Service which runs the sync process-->
         <service
             android:name=".sync.SyncService"
             android:exported="true"
@@ -37,18 +51,29 @@
                 android:resource="@xml/syncadapter" />
         </service>
 
+        <!--
+            Service which can change some synchronization settings in Androids account framework.
+            The app needs a service for this because it needs to be launched from a notification and
+            a notification can start only start a service.
+        -->
         <service
             android:name=".sync.SyncSettingChangerService"
             android:exported="false"/>
-        ...
 
-
+        <!--
+            The app's content provider.
+         -->
         <provider
             android:name=".SurveyContentProvider"
             android:authorities="de.tu-dresden.zqa.survey"
             android:exported="false"
             android:syncable="true" >
         </provider>
+
+
+        <!--
+            All off the app's Activities are registered here.
+        -->
 
         <activity
             android:name=".activities.Calendar"
